--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/webseite-andrea-wennecke/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrea Wennecke - Kreativtherapie in Lübeck</title>
-    <meta name="description" content="Kunst- und Gestaltungstherapie, Psychotherapie, Ausdruckstherapie: Traumaverarbeitung für Erwachsene und Jugendliche in einem geschützten Raum." />
+    <title>Andrea Wennecke - Kunsttherapeutische Praxis</title>
+    <meta name="description" content="Andrea Wennecke - Kunsttherapeutische Praxis in Hannover. Ganzheitliche Therapieangebote für Erwachsene und Jugendliche." />
     <meta name="author" content="Andrea Wennecke" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +25,6 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
