--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/webseite-andrea-wennecke/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrea Wennecke - Kreativtherapie in Lübeck</title>
     <meta name="description" content="Kunst- und Gestaltungstherapie, Psychotherapie, Ausdruckstherapie: Traumaverarbeitung für Erwachsene und Jugendliche in einem geschützten Raum." />
