--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/webseite-andrea-wennecke/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrea Wennecke - Kreativtherapie in Lübeck</title>
+    <title>Praxis für Psychotherapie & Kunsttherapie</title>
     <meta name="description" content="Kunst- und Gestaltungstherapie, Psychotherapie, Ausdruckstherapie: Traumaverarbeitung für Erwachsene und Jugendliche in einem geschützten Raum." />
     <meta name="author" content="Andrea Wennecke" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
